--- a/app/views/layouts/shared/_ember_page.html.erb
+++ b/app/views/layouts/shared/_ember_page.html.erb
@@ -2,5 +2,5 @@
   <aside>
     <%= render partial: "layouts/shared/sidebar"%>
   </aside>
-  <section id="ember-body"></section>
+  <section ></section>
 </main>
