--- a/frontend/app/components/common/floating-picker.hbs
+++ b/frontend/app/components/common/floating-picker.hbs
@@ -1,13 +1,13 @@
-<div class="floating-picker" {{on "click" this.openPicker}}>
-  <button type="button" {{on "click" this.openPicker}}>
-    <img src={{@icon}} />
-  </button>
-  <div
-    class="floating-picker__container"
-    {{setup-offsets this.receiveOffsetFromModifier}}
-    {{set-position this.pickerPosition}}
-    {{click-outside this.closePicker}}
-  >
-    {{yield this.closePicker}}
-  </div>
+<div
+  class={{concat
+    "floating-picker__container"
+    (if @datePicker " is-date-picker")
+  }}
+  {{setup-offsets this.receiveOffsetFromModifier}}
+  {{set-position this.pickerPosition}}
+  {{click-outside this.closePicker}}
+  {{did-update this.openWatcher @open}}
+  {{click-stop-propagation}}
+>
+  {{yield this.closePicker}}
 </div>
