--- a/frontend/app/components/project-layout.hbs
+++ b/frontend/app/components/project-layout.hbs
@@ -1,6 +1,6 @@
 <div class="board">
   <div class="board__header">
-    <div class="board__header--section">
+    <div class="board__header__section">
       <div class="input-field__search">
         <label class="input-field__label" for="search-project-board">
           Search project board
