--- a/frontend/app/templates/project/attachment.hbs
+++ b/frontend/app/templates/project/attachment.hbs
@@ -1,6 +1,6 @@
 {{page-title "Attachment"}}
 <div class="document-gallery">
-  {{#each this.projectAttachments as |attachment|}}
+  {{#each this.projectAttachmentsList as |attachment|}}
     <div class="document-gallery__item">
       <img
         src={{attachment.document_url}}
