--- a/frontend/app/components/board/status-column.hbs
+++ b/frontend/app/components/board/status-column.hbs
@@ -28,7 +28,7 @@
     </div>
 
     {{#if this.addNewTask}}
-      <Board::NewTask
+      <Board::AddTask
         @statusClass={{@statusClass}}
         @flipAddNewTask={{this.flipAddNewTask}}
       />
