--- a/styles/components/_dropdown.scss
+++ b/styles/components/_dropdown.scss
@@ -2,18 +2,33 @@
 
 .dropdown {
   @include text-regular-sm;
-  width: 22rem;
+  min-width: 20rem;
+  width: 100%;
+  max-height: 30rem;
+  overflow: auto;
 
-  button {
+  &__content {
     @include flex-align-center-justify-start;
     width: 100%;
     gap: 1rem;
     background: $transparent;
-    padding: 1.2rem 2rem;
-    height: 2.8rem;
+    padding: 0.8rem 1.2rem;
+    min-height: 2.8rem;
+    border-left: 4px solid $transparent;
+
+    .status {
+      text-transform: capitalize;
+      @include text-medium-sm;
+      color: $secondary-800;
+    }
 
     img {
       @include make-square(18px);
+    }
+
+    &:hover {
+      background-color: $grey-50;
+      border-left: 4px solid $primary-800;
     }
   }
 }
