--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -80,7 +80,7 @@
       @include clickable-heading;
       list-style: none;
 
-      .link {
+      a {
         @include flex-align-center-justify-start;
         width: 100%;
         text-decoration: none;
@@ -118,5 +118,85 @@
 
   &__actions.open {
     height: 90px;
+  }
+}
+
+.new-project {
+  @include flex-align-start-justify-start;
+  @include make-square(80%);
+  background-color: $white;
+  border-radius: 0.8rem;
+  padding: 5rem;
+
+  &__inputs {
+    padding: 2rem 6rem;
+    height: 100%;
+    flex: 1;
+    @include flex-align-end-justify-between;
+    @include outfit-font;
+    flex-direction: column;
+
+    h3 {
+      color: $secondary-1000;
+      font-family: inherit;
+    }
+
+    p {
+      font-family: inherit;
+    }
+
+    input {
+      width: 350px;
+      padding: 0.8rem 1.2rem !important;
+      height: fit-content !important;
+      @include text-medium-sm;
+
+      &.project-key {
+        text-transform: uppercase;
+        width: 100px;
+      }
+    }
+  }
+
+  &__illustration {
+    height: 100%;
+    flex: 1;
+    @include flex-align-center-justify-center;
+    @include text-regular-sm;
+    color: $secondary-700;
+  }
+
+  &__collaborators {
+    height: 250px;
+    overflow: auto;
+    &-card {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+      gap: 8px;
+
+      div {
+        @include flex-align-center-justify-start;
+        @include text-medium-xs;
+        padding: 10px;
+        word-break: break-word;
+        border-radius: 4px;
+        border: 1px solid $grey-100;
+        gap: 8px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: $grey-50;
+        }
+
+        &.selected {
+          border: 1px solid $primary-1000;
+          background-color: $primary-100;
+
+          &:hover {
+            background-color: $primary-200;
+          }
+        }
+      }
+    }
   }
 }
